--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<!--  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>-->
+    <link rel="icon" href="/favicon.ico" type="image/ico">
     <title>{{ page.title }}</title>
     {%- if site.listen_for_clients_preferred_style -%}
     <link rel="stylesheet" type="text/css" href="{{ "/assets/main.css" | relative_url }}">
