--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="icon" href="https://bwblog.github.io/blog/assets/favicon.ico" type="image/ico">
+    {%- if page.layout == 'home' or page.layout == 'page' -%}
+    <title>{{ site.title }}</title>
+    {%- else -%}
     <title>{{ page.title }}</title>
+    {%- endif -%}
     {%- if site.listen_for_clients_preferred_style -%}
     <link rel="stylesheet" type="text/css" href="{{ "/assets/main.css" | relative_url }}">
   {%- else -%}
