--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,9 +9,11 @@ layout: default
   <ul>
     {%- for post in site.posts -%}
     <li>
-      {%- assign date_format = "%Y-%m-%d" -%}
+      {%- assign date_format = "%Y-%m-%d-%H-%M" -%}
       [ {{ post.date | date_to_string }} ] <a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-    </li>
+
+    <span style="float: right">{{ post.date | date: "%H:%M" }}</span>
+      </li>
     {%- endfor -%}
   </ul>
 {%- endif -%}
